# gazebo-mcp

./: .dockerignore  .gitignore  .gitmodules  DEMO2_TEST_RESULTS.md  INSTALL_MCP.md  MCP_SETUP_GUIDE.md  PATH_MIGRATION.md  QUICK_INSTALL.md  README.md  README_DEMOS.md  TEST_STATUS.md  index.html  install_mcp_global.sh  package.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_mcp.sh  test_mcp_protocol.py  uninstall_mcp_global.sh  verify_mcp_installation.sh  verify_phase2.sh  verify_setup.sh
.github/workflows/: ci.yml
claude/: .gitignore  install.sh
demos/: CONVERSATIONAL_DEMO_GUIDE.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  MANUAL_SETUP_GUIDE.md  QUICKSTART.md  README.md  TEST_RESULTS.md  TROUBLESHOOTING.md  run_demo.py  run_demo_ros2.sh  start_mcp_server.sh  verify_implementation.sh
demos/01_hello_world/: README.md  config.yaml  hello_world_demo.py
demos/02_obstacle_course/: CONVERSATIONAL_DEMO.md  IMPLEMENTATION_COMPLETE.md  README.md  TEST_RESULTS.md  config.yaml  install_turtlebot3.sh  launch_nav2.sh  nav2_params.yaml  setup.sh
demos/02_obstacle_course/models/: simple_robot.sdf
demos/framework/: config_loader.py  demo_executor.py
docs/: ARCHITECTURE.md  BRIDGE_INTEGRATION_SUCCESS.md  GAZEBO_MODERN_MIGRATION_SUMMARY.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TESTING_GUIDE.md  LESSONS_LEARNED_BRIDGE_INTEGRATION.md  METRICS.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_PLAN.md  PHASE5B_COMPLETION_SUMMARY.md  PHASE5B_IMPLEMENTATION_PLAN.md  PHASE8_IMPLEMENTATION_PLAN.md  QUICK_REFERENCE_BRIDGE.md  QUICK_START_IMPROVEMENTS.md  TROUBLESHOOTING_GUIDE_BRIDGE.md
docs/guides/: INSTALLATION.md  MCP_INTEGRATION.md  QUICK_START.md
docs/implementation/: BEST_PRACTICES_APPLIED.md  DOCUMENTATION_REVIEW.md  PHASE_1_SETUP.md  PHASE_2_INFRASTRUCTURE.md  PHASE_4_WORLD_GEN.md
docs/tutorials/: GETTING_STARTED.md
examples/: 02_spawn_and_control.py  02_turtlebot3_spawn.py  03_sensor_streaming.py  README.md  demo_world.sdf
examples/demos/: 06_world_generation_showcase.py  DEMOS_NOTE.md  interactive_demo.py
gazebo_mcp_package/: CAPABILITY_ENHANCEMENT_PLAN.md  MCP_SETUP_GUIDE.md  QUICK_INSTALL.md  README.md  install_mcp_global.sh  package.xml  pyproject.toml  requirements.txt  test_mcp_protocol.py
gazebo_mcp_package/config/: server_config.yaml
gazebo_mcp_package/demos/: CONVERSATIONAL_DEMO_GUIDE.md  MANUAL_SETUP_GUIDE.md  TROUBLESHOOTING.md
gazebo_mcp_package/demos/01_hello_world/: test_hello_world_demo.py
gazebo_mcp_package/demos/02_obstacle_course/: config.yaml  obstacle_course_demo.py  test_obstacle_course_demo.py
gazebo_mcp_package/demos/framework/: __init__.py  demo_validator.py
gazebo_mcp_package/deployment/: gazebo-mcp.service  install.sh
gazebo_mcp_package/docs/api/: conf.py  gazebo_mcp.bridge.rst  gazebo_mcp.utils.rst  modules.rst
gazebo_mcp_package/docs/guides/: INSTALLATION.md  (+1 more)
gazebo_mcp_package/examples/: 08_phase5b_features.py  09_multi_robot_fleet.py  10_collision_avoidance.py
gazebo_mcp_package/install/: setup.sh
gazebo_mcp_package/launch/: gazebo_bridge.launch.py
gazebo_mcp_package/mcp/: README.md
gazebo_mcp_package/plans/: PHASE_4_IMPLEMENTATION_PLAN.md
gazebo_mcp_package/scripts/: generate_mcp_assets.py  start_gazebo_bridge.sh  test_mcp_integration.py  verify_phase2_tools.py
gazebo_mcp_package/tests/: README.md  conftest.py
gazebo_mcp_package/tutorials/: README.md
install/: local_setup.sh
live_demos/: README.md
log/: latest_build
mcp/: README.md
mcp/server/: server.py
plans/: DEMO2_NAV2_UPGRADE_PLAN.md  DEMO_IMPLEMENTATION_PLAN.md  MODERN_GAZEBO_FIX_IMPLEMENTATION_PLAN.md
presentations/: README.md
ros2_gazebo_mcp/: .coverage  .mcp.json  Dockerfile  IMPLEMENTATION_PLAN.md  MCP_SETUP_GUIDE.md  PROJECT_STATUS.md  README.md  docker-compose.yml
ros2_gazebo_mcp/config/: ros2_config.yaml
ros2_gazebo_mcp/demos/: README.md
ros2_gazebo_mcp/deployment/: gazebo-mcp.service
ros2_gazebo_mcp/docs/: ARCHITECTURE.md  ARCHITECTURE_DECISION_MODERN_GAZEBO.md  CODEBASE_ANALYSIS_AND_IMPROVEMENTS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE_MODERN_GAZEBO.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPROVEMENTS_TODO.md  MCP_SERVER_COMPLETION.md  MCP_SERVER_MODERN_GAZEBO_INTEGRATION.md  MIGRATION_COMPLETION_REPORT.md  MIGRATION_QUICKSTART.md  MODERN_ADAPTER_VALIDATION.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE4_AND_5_SUMMARY.md  PHASE4_NICE_TO_HAVE_OPTIONS.md  PHASE4_OPTIONS_QUICK_REFERENCE.md  PHASE4_WORLD_GEN_STATUS.md  PHASE7_COMPLETION_SUMMARY.md  PHASE7_IMPLEMENTATION_PLAN.md  PHASE8_STATUS.md  TEST_FIX_PLAN.md  TROUBLESHOOTING.md
ros2_gazebo_mcp/examples/: 01_basic_connection.py  01_basic_simulation.py  03_sensor_reading.py  04_simulation_control.py  04_world_manipulation.py  05_complete_workflow.py  05_world_generation_integration.py  06_advanced_features.py  07_phase5a_features.py
ros2_gazebo_mcp/mcp/: README.md
ros2_gazebo_mcp/scripts/: generate_mcp_assets.py  show_metrics.py  test_mcp_server.py  test_modern_adapter.sh  test_single_bridge.sh
ros2_gazebo_mcp/showcase_apps/: README.md
ros2_gazebo_mcp/tests/: README.md  test_integration.py  test_modern_adapter_integration.py  test_utils.py
ros2_gazebo_mcp/worlds/: empty_ros2.sdf
scripts/: generate_mcp_assets.py  show_metrics.py  start_gazebo_bridge.sh  test_mcp_integration.py  test_mcp_server.py  tf_relay.py  verify_phase2_tools.py  world_proxy.py
src/gazebo_mcp/: __init__.py  server.py
tests/: README.md  conftest.py
tests/integration/: test_navigation_tools.py  test_workflows.py
tests/unit/: test_model_management.py  test_navigation_tools_basic.py  test_simulation_tools.py
tutorials/: README.md
workflows/: demo-tests.yml  pre-commit.yml
(+164 files in other folders)
