<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_mcp</name>
  <version>0.1.0</version>
  <description>ROS2 Model Context Protocol Server for Gazebo Simulation</description>

  <maintainer email="dev@example.com">Gazebo MCP Team</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/yourusername/gazebo-mcp</url>
  <url type="bugtracker">https://github.com/yourusername/gazebo-mcp/issues</url>
  <url type="repository">https://github.com/yourusername/gazebo-mcp</url>

  <author>Gazebo MCP Team</author>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Gazebo dependencies -->
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>

  <!-- TurtleBot3 dependencies -->
  <depend>turtlebot3_msgs</depend>
  <depend>turtlebot3_gazebo</depend>

  <!-- Additional message/service dependencies -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Python dependencies (installed via pip/requirements.txt) -->
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
